serve resolvable json schemas

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=schemist-test
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+logging.level.com.github.parzonka=DEBUG
